# TASK-53

./: metadata.json
.tmp/: audit_report-1.md  (+4 more)
repo/backend/: .dockerignore  Cargo.toml  Dockerfile
repo/backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_security_rbac_audit.sql  20240103000000_catalog_packages_plans_delivery.sql  20240104000000_billing_payments_refunds.sql  20240105000000_scoring_reporting.sql  20240106000000_ops_config.sql  20240107000000_payment_idempotency_unique.sql  20240108000000_restore_idempotency_window.sql  20240109000000_add_service_route.sql  20240110000000_timestamp_to_datetime.sql
repo/backend/src/: main.rs
repo/backend/src/api/: mod.rs  tracing_fairing.rs
repo/backend/src/application/: alert_engine.rs  auth_service.rs  billing_service.rs  catalog_service.rs  chaos_service.rs  degradation_service.rs  delivery_service.rs  export_service.rs  metrics_service.rs  mod.rs  org_service.rs  package_service.rs  payment_service.rs  plan_service.rs  reconciliation_service.rs  report_service.rs  role_service.rs  scoring_service.rs  seed_service.rs  user_service.rs
repo/backend/src/bootstrap/: mod.rs
repo/backend/src/config/: mod.rs
repo/backend/src/domain/: auth_policy.rs  auth_types.rs  billing_types.rs  catalog_types.rs  error.rs  mod.rs  scoring_types.rs
repo/backend/src/infrastructure/: mod.rs
repo/frontend/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  nginx.conf
repo/frontend/assets/: main.css
repo/frontend/src/: app.rs  app_test.rs  lib.rs  main.rs  router.rs  url_utils.rs  url_utils_test.rs
(+101 files in other folders)
