[package]
name = "careops-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "migrate", "chrono", "uuid", "json", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
argon2 = "0.5"
jsonwebtoken = "9"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"

[dev-dependencies]
rocket = { version = "0.5", features = ["json"] }
